--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ li {
     text-align:center;
 }
 
-#bloc1, #bloc2, #bloc3, #bloc4, #bloc5, #bloc6 {
+#bloc1, #bloc2, #bloc3, #bloc4, #bloc5, #bloc6, #bloc7, #bloc8 {
     display:inline;
     margin: 20px 20px;
     font-size: 20px;
