--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,76 @@
+@media (min-width:1508px) {
+    li {
+        list-style-type: none;
+    }
 
-li {
-    list-style-type: none;
+    /* colinear divs: */
+    #block_container {
+        text-align:center;
+    }
+
+    #bloc1, #bloc2, #bloc3, #bloc4, #bloc5, #bloc6, #bloc7, #bloc8, #bloc9, #bloc10, #bloc11, #bloc12 {
+        display:inline;
+        margin: 20px 20px;
+        font-size: 20px;
+    }
+
+    div.short > a > img {
+        height: 5rem;
+    }
+
+    div.long > a > img {
+        height: 5rem;
+    }
 }
 
-/* colinear divs: */
-#block_container {
-    text-align:center;
+
+@media (min-width:1251px) and (max-width:1507px) {
+    li {
+        list-style-type: none;
+    }
+
+    /* colinear divs: */
+    #block_container {
+        text-align:center;
+    }
+
+    #bloc1, #bloc2, #bloc3, #bloc4, #bloc5, #bloc6, #bloc7, #bloc8, #bloc9, #bloc10, #bloc11, #bloc12 {
+        display:block;
+        margin: 20px 20px;
+        font-size: 20px;
+    }
+
+    div.short > a > img {
+        height: 5rem;
+    }
+
+    div.long > a > img {
+        height: 5rem;
+    }
 }
 
-#bloc1, #bloc2, #bloc3, #bloc4, #bloc5, #bloc6, #bloc7, #bloc8, #bloc9, #bloc10, #bloc11, #bloc12 {
-    display:inline;
-    margin: 20px 20px;
-    font-size: 20px;
-}
+@media (max-width: 1250px) {
+    li {
+        list-style-type: none;
+    }
 
-div.short > a > img {
-    height: 5rem;
-}
+    /* colinear divs: */
+    #block_container {
+        text-align:center;
+    }
 
-div.long > a > img {
-    height: 5rem;
+    #bloc1, #bloc2, #bloc3, #bloc4, #bloc5, #bloc6, #bloc7, #bloc8, #bloc9, #bloc10, #bloc11, #bloc12 {
+        display: block;
+        margin: 10px 10px;
+        font-size: 10px;
+    }
+    
+    div.short > a > img {
+        height: 3rem;
+    }
+    
+    div.long > a > img {
+        height: 3rem;
+    }
 }
+  
